--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=2.0"/>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';"/>
-    <title>Control de Funeraria</title>
+    <title>Funebre</title>
 </head>
 <body>
 <div id="root"></div>
